--- a/src/components/ConnexionButton.css
+++ b/src/components/ConnexionButton.css
@@ -1,9 +1,9 @@
 .connexionButton{
     background-color: rgb(190, 162, 7) ;
-    color: white;
+    color: black;
    border-radius: 10px;
-   
-    
+   font-family: 'Teko', sans-serif; 
+    font-size:1.2em
 }
 
 
@@ -40,6 +40,8 @@
 
 .colorTitle{
  background-color: rgb(190, 162, 7);
+  font-family: 'Teko', sans-serif; 
+    font-size:1.2em;
  
 }
 .colorBody{
@@ -47,13 +49,51 @@
  
 }
 
+
+
 .phraseModal{
-  padding-right: 45px;
+position:relative;
+right:20%;
+     font-family: 'Teko', sans-serif; 
+    font-size:1.3em;
+    border:none;
+    background-color:transparent;
+}
+.phraseModalSuscribe{
+position:relative;
+right:30%;
+     font-family: 'Teko', sans-serif ; 
+    font-size:1em;
+    border:none;
+    background-color: transparent;
+}
+.font-modal{
+   font-family: 'Teko', sans-serif; 
+    font-size:1em
 }
 
 .buttonForm{
-  margin-left: 40%;
-  margin-top: 5%;
+  margin-left: 18%;
+  margin-top: 10%;
+     font-family: 'Teko', sans-serif; 
+ font-size:0.5em 
+}
+.buttonFormSuscribe{
+  margin-left: 17%;
+  margin-top: 10%;
+     font-family: 'Teko', sans-serif !important; 
+ font-size:1em !important
+}
+
+
+.valider-connexion{
+ font-family: 'Teko', sans-serif; 
+ font-size:2em
+}
+
+
+.place-input{
+  margin-left: 33%;
 }
 
 
@@ -109,20 +149,44 @@
  
 }
 
+
 .phraseModal{
-  padding-right: 27%;
-  background-color: white;
-  border-style: none;
- 
+position:relative;
+right:27%;
+     font-family: 'Teko', sans-serif; 
+    font-size:1.3em;
+    border:none;
+    
 }
 
 .phraseModal:hover{
   color:rgb(190, 162, 7)
 }
 
+.phraseModalSuscribe{
+position:relative;
+right:29%;
+     font-family: 'Teko', sans-serif; 
+    font-size:1.3em;
+    border:none
+}
+
+
+.place-input{
+  margin-left: 0%;
+}
 .buttonForm{
   margin-top: 5%;
   margin-left: 40%;
+  width: 100px;
+}
+
+.buttonFormSuscribe{
+  
+  margin-left: 40%;
+  margin-top: 10%;
+     font-family: 'Teko', sans-serif !important; 
+ font-size:1em !important;
   width: 100px;
 }
 
