--- a/src/components/SuscribeButton.css
+++ b/src/components/SuscribeButton.css
@@ -1,5 +1,7 @@
 .suscribeButton{
-    color: rgb(190, 162, 7);
+    color:black;
     text-align: center;
     border-radius: 10px;
+       font-family: 'Teko', sans-serif; 
+    font-size:1.1em
 }
