--- a/src/pages/Accueil.css
+++ b/src/pages/Accueil.css
@@ -1,7 +1,7 @@
 .accueil{
     
     background-image: url(../assets/marble.jpg);
-    height: 150em;
+    height: 100%    ;
     width: 100%;
    background-attachment:fixed;
     background-size: cover;
@@ -9,6 +9,7 @@
     color: white;
     z-index: 1;
 }
+
 
 
 
@@ -52,8 +53,17 @@ transform: scale(1.1);
 
 .explanation{
     margin-left: 20px;
-    font-size: 20px;
+    font-size: 30px;
      text-decoration: none;
+     font-family: 'Teko', sans-serif;
+     color:black
+}
+.explanation3{
+    margin-left: 20px;
+    font-size: 160px;
+     text-decoration: none;
+     font-family: 'Teko', sans-serif;
+     color:black
 }
 
 .container2{
@@ -241,8 +251,16 @@ transform: scale(1.1);
 
 .explanation{
     margin-left: 20px;
-    font-size: 20px;
+    font-size: 0.7em;
      text-decoration: none;
+     color: black;
+}
+.explanation3{
+    margin-left: 20px;
+    font-size: 1.7em;
+    font-family: 'Teko', sans-serif;
+     text-decoration: none;
+     color: black;
 }
 
 .container2{
@@ -289,12 +307,7 @@ transform: scale(1.1);
   margin-top:60px
 }
 
-.explanation2{
-   
-    font-size: 20px;
-    margin-left: 20px;
-     text-decoration: none;
-}
+
 
 .container3{
 display: flex;
@@ -331,19 +344,12 @@ transform: scale(1.1);
     
  font-family: 'Sedgwick Ave Display', cursive;
      text-align: center;
-     font-size: 40px; 
+     
       color: black; 
     margin-top: 60px;
      
 }
 
-.explanation3{
-    text-align: center;
-    margin-left: 20px;
-    font-size: 20px;  
-    color: black; 
-    text-decoration: none;
-}
 
 .textImage4{
 
