--- a/src/pages/ActuAdmin.css
+++ b/src/pages/ActuAdmin.css
@@ -18,14 +18,21 @@
 }
 
 .add-item{
-    margin-left: 45%;
-    margin-top: 2%;
-    margin-bottom: 2%;
+    margin-left: 35%;
+    margin-top: 5%;
+    margin-bottom: 5%;
     border-radius: 10px;
     color: white;
     background-color: black;
 }
 
-.actu-fifa{
-
+@media screen and (min-width: 1023px) {
+.add-item{
+    margin-left: 46%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    border-radius: 10px;
+    color: white;
+    background-color: black;
+}
 }
