--- a/src/pages/RechercheDeJoueurs.css
+++ b/src/pages/RechercheDeJoueurs.css
@@ -72,7 +72,7 @@ font-size: 20px;
 	list-style-type: none;
 	margin-top: 50px;
 	font-family: 'Teko', sans-serif;
-	
+		z-index:1;
 	display:flex;
 	font-size: 30px;
 	
@@ -91,7 +91,7 @@ brown 3px 3px 0,
 color:black;
 font-size: 25px;
 	display:flex;
-	
+	z-index:1
 	
 }
 
@@ -100,7 +100,7 @@ font-size: 25px;
 	display: flex;
 	flex-wrap:wrap;
 	
-z-index: 9;
+z-index: 1;
 }
 
 
@@ -111,7 +111,7 @@ z-index: 9;
 display:flex;
 height:100%;
 width:50px	;
-	z-index: 9;	 
+	 
 }
 
 .backrecherche{
@@ -120,10 +120,10 @@ width:50px	;
 background-color:black;
 	width: 20%;
 	margin-left: 1216px;
-	z-index: 9;
 	
+	z-index: 9999;
 
-	float:right
+	position: absolute;
 }
 .listerecherche{
 
@@ -133,7 +133,7 @@ background-color:black;
 	  text-decoration: none;
 	  height:100%;
 	  margin-top:20px;
-	 z-index: 9;
+	 
 	 
 	
 }
@@ -464,16 +464,19 @@ left:60%
 }
 .colomnevitessejoueur{
 position: absolute;
-left:69%
+left:69%;
+	z-index:1
 }
 .colomnepuissancejoueur{
 position: absolute;
-left:77%
+left:77%;
+	z-index:1
 }
 
 .colomnedefensejoueur{
 position: absolute;
 left:85%;
+	z-index:1
 
 }
 
@@ -486,6 +489,7 @@ margin-left: 1000px
 .colomnepassejoueur{
 position: absolute;
 left: 94%;
+	z-index:1
 
 }
 .colomnepassejoueurtest{
