--- a/src/components/CarteFut.css
+++ b/src/components/CarteFut.css
@@ -53,7 +53,7 @@ padding-top: 60px;
 	background-image: url(../assets/newcard.jpg);
 
 width: 110px;
-    height:100em;
+    height:15em;
 	background-repeat: no-repeat;
 	background-size:100% ;
   
@@ -74,13 +74,13 @@ text-align: center;
 	.player-rating-team{
 		position:relative;
 		left:15%;
-		top:1.5%	;
+		top:9%	;
 		font-size: 13px;
 	}
 	.player-position-team{
 		position:relative;
 		left:15%;
-		top:1.5%;
+		top:10%;
 		font-size: 13px;		
 	}
 
@@ -101,7 +101,7 @@ padding-top: 33px;
 	background-image: url(../assets/newcard.jpg);
 
 width: 90px;
-    height:100em;
+    height:15em;
 	background-repeat: no-repeat;
 	background-size:100% ;
   
@@ -122,13 +122,13 @@ text-align: center;
 	.player-rating-team{
 		position:relative;
 		left:15%;
-		top:1.2%;
+		top:8%;
 		font-size: 12px;	
 	}
 	.player-position-team{
 		position:relative;
 		left:15%;
-		top:1.1%	;
+		top:8%	;
 		font-size: 12px;	
 	}
 
@@ -144,13 +144,13 @@ padding-top: 27px;
 }
 
 }
-@media screen and (max-width: 435px) {
+@media screen and (min-width: 415.1px) and (max-width: 435px) {
 
 .fut-player-card-team-perso {
 	background-image: url(../assets/newcard.jpg);
 
 width: 60px;
-    height:100em;
+    height:15em;
 	background-repeat: no-repeat;
 	background-size:100% ;
   
@@ -170,22 +170,22 @@ text-align: center;
 
 		.player-rating-team{
 		position:relative;
-		left:11%;
-		top:0.8%	;
+		left:15%;
+		top:10%	;
 		font-size: 9px;
 	}
 	.player-position-team{
 		position:relative;
-		left:11%;
-		top:0.7%;
+		left:15%;
+		top:10%;
 		font-size: 9px;		
 	}
 
 .player-name-team {
 	position:relative;
-padding-top: 12px;
+padding-top: 33px;
 	text-align: center;
-	font-size: 9px;
+	font-size: 11px;
 	
 
 	
@@ -198,7 +198,7 @@ padding-top: 12px;
 .fut-player-card-team-perso {
 	background-image: url(../assets/newcard.jpg);
 
-width: 85px;
+width: 70px;
    
 	background-repeat: no-repeat;
 	background-size:100% ;
@@ -220,19 +220,19 @@ text-align: center;
 		.player-rating-team{
 		position:relative;
 		left:15%;
-		top:1.3%	;
+		top:4%	;
 		font-size: 9px;
 	}
 	.player-position-team{
 		position:relative;
 		left:15%;
-		top:1.4%;
+		top:3%;
 		font-size: 9px;		
 	}
 
 .player-name-team {
 	position:relative;
-padding-top: 33px;
+padding-top: 5px;
 	text-align: center;
 	font-size: 11px;
 	
