--- a/src/pages/Informations.css
+++ b/src/pages/Informations.css
@@ -8,7 +8,7 @@ body{
    background-attachment:fixed;
     height: 40em;
 padding-top: 5%;
- font-family: 'Sedgwick Ave Display', cursive;
+font-family: 'Teko', sans-serif;
 }
 
 .button-position{
