--- a/src/pages/Accueil.css
+++ b/src/pages/Accueil.css
@@ -48,6 +48,10 @@ transform: scale(1.1);
 .title{
  font-family: 'Teko', sans-serif;
      text-decoration: none;
+     color:black
+}
+.title:hover{
+color: rgb(190, 162, 7) ;
 }
 
 .explanation{
@@ -103,6 +107,10 @@ transform: scale(1.1);
 .title2{
  font-family: 'Teko', sans-serif;
    text-align: center;
+       color: black;  
+}
+.title2:hover{
+color: rgb(190, 162, 7) ;
 }
 
 .explanation2{
@@ -147,9 +155,12 @@ transform: scale(1.1);
  font-family: 'Teko', sans-serif;
       text-align: center;
      font-size: 40px; 
-      color: black; 
+      color: black;    
+}
+.title3:hover{
     
-     
+color: rgb(190, 162, 7) ;
+          
 }
 
 .explanation3{
@@ -165,13 +176,13 @@ transform: scale(1.1);
 margin-top: 60px;
      text-align: center;
      font-size: 40px; 
-      color: black; 
+   
     
      
 }
 .actufifa{
     text-decoration: none;
-    color: black;
+    
 }
 .actufifa:hover{
    color: rgb(190, 162, 7) ;
@@ -179,7 +190,7 @@ margin-top: 60px;
 
 .navlinkk{
     text-decoration: none;
-    color: black;
+
 }
 .navlinkk:hover{
     color:rgb(190, 162, 7)
@@ -325,12 +336,7 @@ border-radius: 10px;
  
 }
 
-.troisiemeImage:hover{
--ms-transform: scale(1.1); /* IE 9 */
--webkit-transform: scale(1.1); /* Safari 3-8 */
-transform: scale(1.1);
 
-}
 
 
 
@@ -340,7 +346,7 @@ transform: scale(1.1);
  font-family: 'Teko', sans-serif;
       text-align: center;
      
-      color: black; 
+      
     margin-top: 60px;
      
 }
