--- a/src/pages/RechercheDeJoueurs.css
+++ b/src/pages/RechercheDeJoueurs.css
@@ -9,6 +9,7 @@
 	
 }
 
+
 .background2{
     background-image: url(../assets/marble.jpg);
    background-size: cover;
@@ -99,7 +100,7 @@ font-size: 25px;
 .good{
 	display: flex;
 	flex-wrap:wrap;
-	
+	margin-top: -0px;
 z-index: 1;
 }
 
@@ -109,7 +110,7 @@ z-index: 1;
 	
 	color: white;
 display:flex;
-height:100%;
+height:40px;
 width:50px	;
 	 
 }
@@ -118,23 +119,54 @@ width:50px	;
 
 
 background-color:black;
-	width: 20%;
+	width: 30%;
 	margin-left: 1216px;
 	
 	z-index: 9999;
-
-	position: absolute;
+position:relative;
+	float:right;
 }
 .listerecherche{
-
+	text-decoration: none;
+}
+.listerecherche-firstname{
+position: absolute;
+left:-2%;
 	padding-left:40px;
 	font-family: 'Teko', sans-serif;
 	font-size: 30px;
 	  text-decoration: none;
-	  height:100%;
-	  margin-top:20px;
-	 
-	 
+	 	
+}
+.listerecherche-lastname{
+position: absolute;
+left:25%;
+	padding-left:40px;
+	font-family: 'Teko', sans-serif;
+	font-size: 30px;
+	  text-decoration: none;
+
+}
+.listerecherche-rate{
+position: absolute;
+left:55%;
+	padding-left:40px;
+	font-family: 'Teko', sans-serif;
+	font-size: 30px;
+	  text-decoration: none;
+	
+}
+.listerecherche-position{
+position: absolute;
+left:75%;
+	padding-left:40px;
+	font-family: 'Teko', sans-serif;
+	font-size: 30px;
+	  text-decoration: none;
+	  
+}
+.listerecherche-test{
+
 	
 }
 
@@ -210,6 +242,7 @@ font-weight: bolder;
 .searchbar{
 text-align: end;
 margin-top: 20px;
+
 z-index: 15;
 }
 
@@ -406,7 +439,7 @@ transform: scale(1.1);
 	
 	width: 100%;
 	
-	margin-bottom: 20px;
+	margin-bottom: 40px;
 
 
 }
@@ -460,7 +493,8 @@ left:51%
 
 .colomnedribblesjoueur{
 position: absolute;
-left:60%
+left:60%;
+z-index:1
 }
 .colomnevitessejoueur{
 position: absolute;
@@ -495,6 +529,7 @@ left: 94%;
 .colomnepassejoueurtest{
 position: relative;
 left: 94%;
+z-index:1
 
 }
 
