--- a/src/components/Bann.css
+++ b/src/components/Bann.css
@@ -38,6 +38,7 @@ body {
 }
 
 .fontStyle{
-    font-family: 'Acme', sans-serif, cursive;
+  font-family: 'Teko', sans-serif;
+  font-size: 35px !important;
 }
 
