--- a/src/components/ConnexionButton.css
+++ b/src/components/ConnexionButton.css
@@ -152,9 +152,9 @@ right:30%;
 
 .phraseModal{
 position:relative;
-right:27%;
+right:22%;
      font-family: 'Teko', sans-serif; 
-    font-size:1.3em;
+    font-size:1.8em;
     border:none;
     
 }
@@ -165,9 +165,9 @@ right:27%;
 
 .phraseModalSuscribe{
 position:relative;
-right:29%;
+right:24%;
      font-family: 'Teko', sans-serif; 
-    font-size:1.3em;
+    font-size:1.8em;
     border:none
 }
 
@@ -179,6 +179,10 @@ right:29%;
   margin-top: 5%;
   margin-left: 40%;
   width: 100px;
+}
+
+.col-form-label{
+font-size: 1.8em !important;
 }
 
 .buttonFormSuscribe{
