--- a/src/pages/ListeJoueurs.css
+++ b/src/pages/ListeJoueurs.css
@@ -38,7 +38,8 @@ font-size: 25px;
 .style-attributs {
 	list-style-type: none;
 	text-decoration: none;
-	font-family: 'Sedgwick Ave Display', cursive;
+	 font-family: 'Teko', sans-serif;
+	 font-size: 30px;
 	width: 100%;
 
 	margin-bottom: 50px;
